<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnGetResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnGetData"
        tools:text="запрос"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvChannelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvChannelName"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvChannelNameResult"
        app:layout_constraintTop_toBottomOf="@+id/btnGetResult" />

    <TextView
        android:id="@+id/tvChannelNameResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvChannelName"
        app:layout_constraintLeft_toRightOf="@+id/tvChannelName"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvDateCreationChannel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDateCreationChannel"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvChannelNameResult"
        app:layout_constraintTop_toBottomOf="@+id/tvChannelName" />

    <TextView
        android:id="@+id/tvDateCreationChannelResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDateCreationChannel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvChannelName"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvNumberSubscribers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tvNumberSubscribers"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvChannelNameResult"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNumberSubscribersResult" />

    <TextView
        android:id="@+id/tvNumberSubscribersResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvChannelName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDateCreationChannelResult" />

    <TextView
        android:id="@+id/tvNumberVideosResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNumberVideos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvChannelName"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvNumberVideos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvNumberVideos"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvChannelNameResult"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberSubscribers" />

    <TextView
        android:id="@+id/tvNumberViews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvNumberViews"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvChannelNameResult"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberVideos" />

    <TextView
        android:id="@+id/tvNumberViewsResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNumberViews"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvChannelName"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/ivHighImageChannel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberViews" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/btnGetResult"
        android:layout_marginRight="8dp">

        <EditText
            android:id="@+id/etChannelId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etChannelId"
            android:text="UC9pgQfOXRsp4UKrI8q0zjXQ"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>